--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -82,7 +82,7 @@
 			margin-left: -14px;
 		}
 
-		@include mixins.respond-to(small-down) {
+		@include mixins.respond-to(tiny-down) {
 			columns: 1;
 		}
 	}
