--- a/src/app/components/tiles-info/tiles-info.component.scss
+++ b/src/app/components/tiles-info/tiles-info.component.scss
@@ -18,43 +18,11 @@
 		}
 	}
 
-	.tiles-header {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		padding-top: 14px;
-
-		select {
-			margin-left: 8px;
-		}
-
-		label {
-			margin-left: 8px;
-			display: inline-flex;
-			flex-direction: row;
-			align-items: center;
-			height: 100%;
-
-			checkbox {
-				margin-left: 4px;
-			}
-		}
-
-		button {
-			margin-left: 16px;
-		}
-	}
-
 	.tiles-content {
 		display: flex;
 		flex-flow: row wrap;
 		flex: 1;
 		overflow-y: auto;
-	}
-
-	.tiles-reference {
-		padding-top: 5px;
 	}
 
 	.tile {
@@ -145,22 +113,6 @@
 		}
 	}
 
-	@include mixins.respond-to(small-down) {
-		.tiles-header {
-			flex-direction: column;
-			text-align: center;
-
-			form {
-				order: 1;
-			}
-
-			.tiles-reference {
-				order: 2;
-			}
-		}
-
-	}
-
 	@include mixins.respond-to(pico-down) {
 		.tiles-section-9, .tiles-section-5, .tiles-section-4, .tiles-section-3 {
 			.tiles-set {
@@ -173,4 +125,50 @@
 		}
 	}
 
+	.tiles-footer {
+		padding-top: 8px;
+
+		.tiles-form {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			flex-wrap: wrap;
+			gap: 8px;
+			width: 100%;
+			margin-bottom: 8px;
+
+			.tiles-imageset {
+				display: flex;
+				flex-direction: row;
+				flex-wrap: wrap;
+				align-items: center;
+				gap: 8px;
+			}
+
+			.tiles-select {
+				display: flex;
+				flex-direction: row;
+				flex-wrap: nowrap;
+				align-items: center;
+				gap: 8px;
+			}
+
+			label {
+				display: inline-flex;
+				flex-direction: row;
+				align-items: center;
+				height: 100%;
+				flex: 1;
+
+				input {
+					margin-right: 6px;
+				}
+			}
+		}
+
+		.tiles-reference {
+			text-align: center;
+		}
+	}
 }
